syntax = "proto3";

package brymck.alpha_vantage.v1;

option go_package = "genproto";

// An example API
service AlphaVantageAPI {
    // Get the latest quote for a security
    rpc GetQuote (GetQuoteRequest) returns (GetQuoteResponse);

    // Get the price time series for a security
    rpc GetTimeSeries (GetTimeSeriesRequest) returns (GetTimeSeriesResponse);
}

// A request for a quote
message GetQuoteRequest {
    // The public ticker symbol for the stock
    string symbol = 1;
}

// A response to a quote request
message GetQuoteResponse {
    // The open price
    double open = 1;

    // The high price
    double high = 2;

    // The low price
    double low = 3;

    // The current price
    double price = 4;

    // The daily volume
    double volume = 5;

    // The latest trading day
    Date latest_trading_day = 6;

    // The previous close
    double previous_close = 7;
}

// A request for time series
message GetTimeSeriesRequest {
    // The public ticker symbol for the stock
    string symbol = 1;

    // Whether to return the full time series for the stock. By default, only the latest 100 data points are retrieved.
    // When anbled, the full-length time series of 20+ years of historical data are retrieved. Leaving this option
    // false is recommended if you would like to reduce the data size of each API call.
    bool full = 2;
}

// A response to a time series request
message GetTimeSeriesResponse {
    // A series of data points
    repeated TimeSeriesDataPoint time_series = 1;
}

// An observation in a time series
message TimeSeriesDataPoint {
    // The observation date
    Date date = 1;

    // The open price
    double open = 2;

    // The high price
    double high = 3;

    // The low price
    double low = 4;

    // The close price
    double close = 5;

    // The daily volume
    double volume = 6;
}

// A whole or partial calendar date, where the time of day and time zone are not significant
message Date {
    // Year of date
    int32 year = 1;

    // Month of year
    int32 month = 2;

    // Day of month
    int32 day = 3;
}
